# ABS2_API

./: .gitignore  Demo.ipynb  LICENSE  README.md  pyproject.toml  setup_env.py
abs2/: __init__.py  abs2_api.py  exceptions.py  models.py  rest_adapter.py
tests/: test.json  test_abs2API.py  test_adapter.py
