[build-system]
  build-backend="hatchling.build"
  requires     =["hatchling"]

[project]
  authors=[{ name="Alexander Nenninger", email="alexander.nenninger@nttdata.com" }]
  classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
  ]
  dependencies=["requests >= 2.28"]
  description="A small python wrapper for the ABS2 Web API"
  maintainers=[{ name="Alexander Nenninger", email="alexander.nenninger@nttdata.com" }]
  name="Abs2ApiWrapper"
  readme="README.md"
  requires-python=">=3.7"
  version="0.0.2"

  [project.urls]
    "ABS2 Web API"="https://github.com/nakanocs/ABS2WebAPI"

  [project.optional-dependencies]
    notebook=["ipykernel", "pillow"]
